<resources>
    <string name="app_name">DashboardUIMobile</string>
    <string name="charlie_armando">Charlie Armando N</string>
    <string name="my_storage">My Storage</string>
    <string name="my_photo">My Photo</string>
    <string name="buy_storage">Buy Storage</string>
    <string name="folder_special">Folder Special</string>
    <string name="folder">Folder</string>
    <string name="music">Music</string>
    <string name="need_more_n_space">Need More \n Space?</string>
    <string name="get_unlimited_n_storage">Get Unlimited \n Storage?</string>
    <string name="visit">Visit</string>
    <string name="newest_n_30_days">Newest \n(30 days)</string>
    <string name="dashboard">Dashboard</string>
</resources>